Fix general layout bugs

--- a/packages/ui-sharethrift/src/components/shared/molecules/header/index.module.css
+++ b/packages/ui-sharethrift/src/components/shared/molecules/header/index.module.css
@@ -11,6 +11,7 @@
     background: var(--color-background);
     border-bottom: 1px solid var(--color-primary);
     box-sizing: border-box;
+    position: fixed;
 }
 .logoSection {
     display: flex;
