--- a/packages/ui-sharethrift/src/components/shared/molecules/navigation/index.module.css
+++ b/packages/ui-sharethrift/src/components/shared/molecules/navigation/index.module.css
@@ -54,8 +54,36 @@
     background: var(--color-background);
 }
 
+
 .hamburgerContainer {
   display: none;
+}
+
+:global(.ant-drawer-body){
+    padding: 0 !important;
+}
+:global(.ant-drawer-header){
+    border: 0 !important;
+}
+
+@media (max-width: 768px) {
+  .hamburgerContainer {
+    display: flex;
+    position: fixed;
+    top: 1rem;
+    right: 10px;
+    z-index: 1100;
+  }
+  .hamburger {
+    display: flex;
+  }
+  .logoutDesktop {
+    display: none;
+  }
+  .logoutMobile {
+    display: block;
+    margin-top: 2rem;
+  }
 }
 
 .hamburger {
@@ -103,22 +131,5 @@
   }
   .sidebar.open {
     transform: translateX(0);
-  }
-  .hamburgerContainer {
-    display: flex;
-    position: fixed;
-    top: 1rem;
-    right: 10px;
-    z-index: 1100;
-  }
-  .hamburger {
-    display: flex;
-  }
-  .logoutDesktop {
-    display: none;
-  }
-  .logoutMobile {
-    display: block;
-    margin-top: 2rem;
   }
 }
